Refactor Finsihed, Removed redundant methods and fixed problems